add comment for template

--- a/templates/haproxy/haproxy.cfg
+++ b/templates/haproxy/haproxy.cfg
@@ -1,3 +1,7 @@
+################################################
+#file managed by fabric: do not edit manually
+###############################################
+
 global
     maxconn 100000
     log /dev/log
