fix a few typo and take default debian config into account

--- a/templates/haproxy/haproxy.cfg
+++ b/templates/haproxy/haproxy.cfg
@@ -4,9 +4,14 @@
 
 global
     maxconn 100000
-    log /dev/log
-    stats socket 127.0.0.1:9001 level admin
-    stats timeout 2m
+    log /dev/log local0
+    log /dev/log local1 notice
+    chroot /var/lib/haproxy
+    user haproxy
+    group haproxy
+    daemon
+    stats socket /run/haproxy/admin.sock mode 660 level admin
+    stats timeout 30s
 
 defaults
     mode tcp
