set max conn per instance

--- a/templates/haproxy/haproxy.cfg
+++ b/templates/haproxy/haproxy.cfg
@@ -36,6 +36,7 @@ listen stats
 listen {{instance.name}}
     bind :{{instance.zmq_port}}
     default-server fastinter 500ms fall 2
+    maxconn 5000
     {% for kraken in instance.kraken_engines_url %}
     server {{kraken}} {{kraken}} check
     {%- endfor %}
