--- a/templates/haproxy/haproxy.cfg
+++ b/templates/haproxy/haproxy.cfg
@@ -15,14 +15,16 @@ global
 
 defaults
     mode tcp
-    timeout connect 100ms
-    timeout server 12s
-    timeout client 12s
+    timeout connect 400ms
+    timeout server 300s
+    timeout client 300s
     balance leastconn
     log global
     option tcplog
     option tcp-check
     option dontlognull
+    retries 2
+    option redispatch
 
 listen stats
     bind 0.0.0.0:9000       #Listen on all IP's on port 9000
