Add port parameter on haproxy template

--- a/templates/haproxy/haproxy.cfg
+++ b/templates/haproxy/haproxy.cfg
@@ -40,6 +40,6 @@ listen {{instance.name}}
     default-server fastinter 500ms fall 2
     maxconn 15000
     {% for kraken in instance.kraken_engines_url %}
-    server {{kraken}} {{kraken}} check
+    server {{kraken}} {{kraken}} check port {{instance.zmq_port}}
     {%- endfor %}
 {% endfor %}
